2002-11-23  Masatake YAMATO  <jet@gyve.org>

	* src/helper/bezier-utils.c (sp_bezier_fit_cubic_full): fix memry leaks(u, uPrime).
	This leaks are reported by Michel Schinz <Michel.Schinz@epfl.ch>.

2002-11-22  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-gnome.c (nr_typeface_gnome_lookup): Added all
	glyphs to 0xe000 private plane as well.

	* src/widgets/gradient-selector.c (sp_gradient_selector_set_spread): Set
	position widget spread as well
	(sp_gradient_selector_spread_activate): Ditto

2002-11-21  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/curve.c (sp_curve_closepath): Reinitialize pointers, as we may
	have reallocated path in helper

	* src/knotholder.h: Added hook for knot ungrabbing

	* src/knotholder.c (knot_ungrabbed_handler): Implement
	(sp_knot_holder_destroy): Free list items

	* src/sp-ellipse.c (sp_arc_start_set): Use genericellipse closed marker
	(sp_arc_end_set): Ditto
	(sp_arc_set_elliptical_path_attribute): Ditto

	* autogen.sh: Added '--intl' to gettextize flags, seems to be safe for
	older gettexts as well

	* src/dialogs/xml-tree.c (on_tree_select_row): Remove extra blockade
	counting (thanks to MenTaLguY)
	(on_tree_unselect_row): Ditto

2002-11-20  Masatake YAMATO  <jet@gyve.org>

	* src/seltrans.c (sp_sel_trans_init): Set null to
	stamp_cache.
	(sp_sel_trans_ungrab): Clear stamp_cache.
	(sp_sel_trans_stamp): If available, use stamp_cache.
	Else build stamp_cache. l0 is removed. Don't
	free the list here.

	* src/seltrans.h: Included glib.h.
	(struct _SPSelTrans): added new field stamp_cache.

2002-11-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/interface.c (sp_ui_dialog_menu): Do not bring up > 1 transform dialogs at once

	* src/seltrans.c (sp_sel_trans_stamp): Reversing still was not correct,
	replaced it with explicit sort

2002-11-20  Masatake YAMATO  <jet@gyve.org>

	* src/seltrans.c (sp_sel_trans_stamp): The order of
	selections is reversed before stamping.
